--- a/example/remote.html
+++ b/example/remote.html
@@ -23,7 +23,7 @@ THE SOFTWARE.
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>EasyXSS Hosted window</title>
-        <script type="text/javascript" src="xssproviders.js">
+        <script type="text/javascript" src="../easyxss.js">
         </script>
         <script type="text/javascript">
         	/* This window can use window.open() to open up a new window in its own domain.
