git-svn-id: https://easyxss.googlecode.com/svn/trunk@7 9a36352c-5caa-11de-8a4b-256bef446c6c

--- a/example/remote.html
+++ b/example/remote.html
@@ -49,20 +49,20 @@ THE SOFTWARE.
                 proxy = EasyXSS.createProxy({
                     onData: function(data, origin){
 						win= window.open();
+						if (!win){
+							alert("You need to allow popups for this domain for this example to work");
+						}else{
 						win.document.write("data from '" + origin +"'<br/>");
 						for (key in data){
 							win.document.write(key+"="+data[key]+"<br/>");
 						}
+						win.document.write('<input type="button" onclick="window.opener.proxy.sendData({a:\'b\',c:\'d\',e:\'f\'});" value="Send data to local"/>');
 						win.document.close();
+						}
                     },
                     converter: EasyXSS.converters.hashTableConverter,
                     onReady: function(){
                         proxy.start();
-                        proxy.sendData({
-                            a: "b",
-                            c: "d",
-                            e: "f"
-                        });
                     }
                 });
             }
