--- a/example/hash.html
+++ b/example/hash.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>EasyXSS Hash window</title>
+        <title></title>
+        <meta http-equiv="CACHE-CONTROL" content="PUBLIC"/>
+        <meta http-equiv="EXPIRES" content="Sat, 01 Jan 2050 00:00:00 GMT"/>
         <script type="text/javascript">
-            /* This window is only used when using hash-based communication.
-             * The method below is so that we have a reliable way of knowing that the window is accessible using window.open(url,name);
-             */
-            window.parent.parent.proxyOnReady();
+            window.parent.parent.EasyXSS.onReady(location.hash.substring(1));
         </script>
     </head>
     <body>
