--- a/example/remote.html
+++ b/example/remote.html
@@ -1,16 +1,13 @@
 <!--
 Copyright (c) <2009> <Øyvind Sean Kinsey, oyvind@kinsey.no>
-
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:
-
 The above copyright notice and this permission notice shall be included in
 all copies or substantial portions of the Software.
-
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -18,53 +15,59 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
--->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+--> <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>EasyXSS Hosted window</title>
         <script type="text/javascript" src="../easyxss.js">
         </script>
+        <script type="text/javascript" src="/json2.js">
+        </script>
         <script type="text/javascript">
-        	/* This window can use window.open() to open up a new window in its own domain.
-        	 * These two will be able to communicate directly, meaning that we now have two
-        	 * windows visible to the user that are able to communicate
-        	 * It can also run XHR-queries the local domain that can be returned to the other side of the proxy.
-        	 */
-            var proxy;
-			var win;
+			if (typeof console==="undefined"){window.console={log:function(){}};}
+			console.log(location + " load");
+            /* This window can use window.open() to open up a new window in its own domain.
+             * These two will be able to communicate directly, meaning that we now have two
+             * windows visible to the user that are able to communicate
+             * It can also run XHR-queries the local domain that can be returned to the other side of the proxy.
+             */
+			var proxy;
+            var remoteapp;
             window.onload = function(){
                 /*Example using transport directly, this only supports string messages
-                proxy = XSS.createTransport({
-                    onMessage: function(message, sender){
-                        alert(location.host + " Got message " + message + "' from " + sender)
-                    },
-                    onReady: function(){
-                        proxy.start();
-                        proxy.postMessage("MESSAGE From remote");
-                    }
-                });
-                */
-				
-                proxy = EasyXSS.createProxy({
-                    onData: function(data, origin){
-						win= window.open();
-						if (!win){
-							alert("You need to allow popups for this domain for this example to work");
-						}else{
-						win.document.write("data from '" + origin +"'<br/>");
-						for (key in data){
-							win.document.write(key+"="+data[key]+"<br/>");
-						}
-						win.document.write('<input type="button" onclick="window.opener.proxy.sendData({a:\'b\',c:\'d\',e:\'f\'});" value="Send data to local"/>');
-						win.document.close();
-						}
-                    },
-                    converter: EasyXSS.converters.hashTableConverter,
-                    onReady: function(){
-                        proxy.start();
-                    }
-                });
+                 proxy = XSS.createTransport({
+                 onMessage: function(message, sender){
+                 alert(location.host + " Got message " + message + "' from " + sender)
+                 },
+                 onReady: function(){
+                 proxy.start();
+                 proxy.postMessage("MESSAGE From remote");
+                 }
+                 });
+                 */
+                remoteapp = window.open('remoteapp.html', 'mainapp', 'width=300,height=300');
+                if (remoteapp) {
+                    proxy = EasyXSS.createChannel({
+                        onData: function(data, origin){
+							remoteapp.focus();
+                            var div = remoteapp.document.createElement("div");
+                            div.innerHTML = "data from '" + origin + "'";
+                            remoteapp.document.body.appendChild(div);
+                            for (key in data) {
+                                var div = remoteapp.document.createElement("div");
+                                div.innerHTML = key + "=" + data[key];
+                                remoteapp.document.body.appendChild(div);
+                            }
+                        },
+                        converter: EasyXSS.converters.json2Converter,
+                        onReady: function(){
+                            proxy.start();
+                        }
+                    });
+                }
+                else {
+                    alert("you need to allow opening popups for this to work");
+                }
             }
         </script>
     </head>
