git-svn-id: https://easyxss.googlecode.com/svn/trunk@12 9a36352c-5caa-11de-8a4b-256bef446c6c

--- a/example/remoteapp.html
+++ b/example/remoteapp.html
@@ -8,6 +8,6 @@
 		</script>
     </head>
     <body>
-	<input type="button" onclick="window.opener.proxy.sendData({a:'b',c:'d',e:'f'});" value="send data to remote"/>
+	<input type="button" onclick="window.opener.proxy.sendData({a:'b',c:'d',e:'f'});" value="send data to local"/>
     </body>
 </html>
