--- a/example/remotemethods.html
+++ b/example/remotemethods.html
@@ -18,16 +18,16 @@ THE SOFTWARE.
 --> <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>EasyXSS Hosted window</title>
+        <title>easyXSS Hosted window</title>
         <script type="text/javascript" src="../easyxss.js">
         </script>
         <script type="text/javascript" src="/json2.js">
         </script>
         <script type="text/javascript">
             window.onload = function(){
-                channel = EasyXSS.createChannel({
+                channel = easyXSS.createChannel({
                     onReady: function(){
-                        remote = EasyXSS.createInterface({
+                        remote = easyXSS.createInterface({
 							channel:channel,
                             local: {
                                 addNumbers: {
