--- a/example/hash.html
+++ b/example/hash.html
@@ -5,7 +5,7 @@
         <meta http-equiv="CACHE-CONTROL" content="PUBLIC"/>
         <meta http-equiv="EXPIRES" content="Sat, 01 Jan 2050 00:00:00 GMT"/>
         <script type="text/javascript">
-            window.parent.parent.EasyXSS.onReady(location.hash.substring(1));
+            window.parent.parent.easyXSS.onReady(location.hash.substring(1));
         </script>
     </head>
     <body>
