--- a/example/methods.html
+++ b/example/methods.html
@@ -18,7 +18,7 @@ THE SOFTWARE.
 --> <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>EasyXSS Hosting window</title>
+        <title>easyXSS Hosting window</title>
         <script type="text/javascript" src="../easyxss.js">
         </script>
         <script type="text/javascript" src="/json2.js">
@@ -26,11 +26,11 @@ THE SOFTWARE.
         <script type="text/javascript">
             var channel, remote;
             window.onload = function(){
-                channel = EasyXSS.createChannel({
+                channel = easyXSS.createChannel({
                     local: location.protocol + "//" + location.host + "/projects/easyxss/example/hash.html",
                     remote: "http://xssremote.kinsey.no/projects/easyxss/example/remotemethods.html",
                     onReady: function(){
-						remote = EasyXSS.createInterface({
+						remote = easyXSS.createInterface({
                             channel: channel,
                             remote: {
                                 addNumbers: {},
