--- a/example/remotetransport.html
+++ b/example/remotetransport.html
@@ -18,13 +18,13 @@ THE SOFTWARE.
 --> <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>EasyXSS Hosted window</title>
+        <title>easyXSS Hosted window</title>
         <script type="text/javascript" src="../easyxss.js">
         </script>
         <script type="text/javascript">
             var transport;
             window.onload = function(){
-                transport = EasyXSS.createTransport({
+                transport = easyXSS.createTransport({
                     onMessage: function(message, origin){
                         alert("Received '" + message + "' from '" + origin + "'");
                     }
