git-svn-id: https://easyxss.googlecode.com/svn/trunk@46 9a36352c-5caa-11de-8a4b-256bef446c6c

--- a/example/methods.html
+++ b/example/methods.html
@@ -30,8 +30,7 @@ THE SOFTWARE.
                     local: location.protocol + "//" + location.host + "/projects/easyxss/example/hash.html",
                     remote: "http://xssremote.kinsey.no/projects/easyxss/example/remotemethods.html",
                     onReady: function(){
-						remote = easyXSS.createInterface({
-                            channel: channel,
+                        remote = easyXSS.createInterface(channel, {
                             remote: {
                                 addNumbers: {},
                                 multiplyNumbers: {},
