--- a/example/remotemethods.html
+++ b/example/remotemethods.html
@@ -36,7 +36,7 @@ THE SOFTWARE.
                                     }
                                 },
                                 multiplyNumbers: {
-                                    async: true,
+                                    isAsync: true,
                                     method: function(a, b, fn){
                                         window.setTimeout(function(){
                                             fn(a * b);
