git-svn-id: https://easyxss.googlecode.com/svn/trunk@58 9a36352c-5caa-11de-8a4b-256bef446c6c

--- a/example/index.html
+++ b/example/index.html
@@ -64,7 +64,7 @@ THE SOFTWARE.
                         }
                     },
                     converter: easyXSS.converters.json2Converter,
-                    local: location.protocol + "//" + location.host + "/projects/easyxss/example/hash.html",
+                    local: "/projects/easyxss/hash.html",
                     remote: "http://xssremote.kinsey.no/projects/easyxss/example/remote.html"
                 });
                 
