--- a/example/data.html
+++ b/example/data.html
@@ -25,7 +25,7 @@ THE SOFTWARE.
             var channel;
             window.onload = function(){
                 channel = easyXSS.createChannel({
-                    local: "/projects/easyxss/example/hash.html",
+                    local: "/projects/easyxss/hash.html",
                     remote: "http://xssremote.kinsey.no/projects/easyxss/example/remotedata.html",
 					converter:easyXSS.converters.hashTableConverter,
                     onReady: function(){
