--- a/example/transport.html
+++ b/example/transport.html
@@ -25,7 +25,7 @@ THE SOFTWARE.
             var transport;
             window.onload = function(){
                 transport = easyXSS.createTransport({
-                    local: "/projects/easyxss/example/hash.html",
+                    local: "/projects/easyxss/hash.html",
                     remote: "http://xssremote.kinsey.no/projects/easyxss/example/remotetransport.html",
                     onReady: function(){
                         transport.postMessage("This is a message sent from " + location);
