git-svn-id: https://easyxss.googlecode.com/svn/trunk@59 9a36352c-5caa-11de-8a4b-256bef446c6c

--- a/hash.html
+++ b/hash.html
@@ -5,7 +5,9 @@
         <meta http-equiv="CACHE-CONTROL" content="PUBLIC"/>
         <meta http-equiv="EXPIRES" content="Sat, 01 Jan 2050 00:00:00 GMT"/>
         <script type="text/javascript">
-            window.parent.parent.easyXSS.onReady(location.hash.substring(1));
+            if (location.hash) {
+				window.parent.parent.easyXSS.onReady(location.hash.substring(1));
+			}
         </script>
     </head>
     <body>
