git-svn-id: https://easyxss.googlecode.com/svn/trunk@63 9a36352c-5caa-11de-8a4b-256bef446c6c

--- a/example/methods.html
+++ b/example/methods.html
@@ -39,6 +39,7 @@ THE SOFTWARE.
                                 }
                             }
                         });
+						remote.noOp();
                     }
                 });
             }
