git-svn-id: https://easyxss.googlecode.com/svn/trunk@68 9a36352c-5caa-11de-8a4b-256bef446c6c

--- a/example/methods.html
+++ b/example/methods.html
@@ -21,7 +21,10 @@ THE SOFTWARE.
         <title>easyXSS Hosting window</title>
         <script type="text/javascript" src="../easyxss.js">
         </script>
-        <script type="text/javascript" src="/json2.js">
+        <script type="text/javascript">
+		    if (typeof JSON == "undefined" || !JSON) {
+				document.write('\x3Cscript type="text/javascript" src="json2.js">\x3C/script>');
+			}
         </script>
         <script type="text/javascript">
             var channel, remote;
