--- a/example/methods.html
+++ b/example/methods.html
@@ -19,12 +19,12 @@ THE SOFTWARE.
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>easyXSS Hosting window</title>
-        <script type="text/javascript" src="../easyxss.js">
-        </script>
         <script type="text/javascript">
-		    if (typeof JSON == "undefined" || !JSON) {
-				document.write('\x3Cscript type="text/javascript" src="json2.js">\x3C/script>');
-			}
+            if (typeof JSON == "undefined" || !JSON) {
+                document.write('\x3Cscript type="text/javascript" src="/json2.js">\x3C/script>');
+            }
+        </script>
+        <script type="text/javascript" src="../easyxss.js">
         </script>
         <script type="text/javascript">
             var channel, remote;
@@ -32,6 +32,7 @@ THE SOFTWARE.
                 channel = easyXSS.createChannel({
                     local: "/projects/easyxss/hash.html",
                     remote: "http://xssremote.kinsey.no/projects/easyxss/example/remotemethods.html",
+                    container: document.getElementById("embedded"),
                     onReady: function(){
                         remote = easyXSS.createInterface(channel, {
                             remote: {
@@ -62,8 +63,23 @@ THE SOFTWARE.
                 })
             }
         </script>
+        <style type="text/css">
+            #embedded {
+                width: 300px;
+                height: 100px;
+                border: 1px dotted black;
+            } #embedded iframe {
+                width: 100%;
+                height: 100%;
+            }
+        </style>
     </head>
     <body>
+        <script type="text/javascript">
+            document.write("Domain: " + location.host);
+        </script>
+        <div id="embedded">
+        </div>
         The remote implementation is synchronous and will return immediately
         <br/>
         <input type="button" onclick="add(3,5)" value="call addNumbers on remote domain"/>
